--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-hello
+<!DOCTYPE html>
+<html>
+<head>
+  <title>welcome</title>
+  <style>
+    body {
+      text-align: center;
+      margin-top: 200px;
+      font-size: 24px;
+    }
+  </style>
+</head>
+<body>
+  <center>
+    <h1>Hello</h1>
+    <p>Welcome to Space VPN App</p>
+  </center>
+</body>
+</html>
