--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <center>
     <h1>Hello</h1>
-    <p>Welcome to Space VPN App</p>
+    <p>Welcome to App</p>
   </center>
 </body>
 </html>
